fix dashboard bootstrap code, now functional on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,24 +1,24 @@
-#records {
+.records {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
 
-#records td,
-#records th {
+.records td,
+.records th {
     border: 1px solid #ddd;
     padding: 8px;
 }
 
-#records tr:nth-child(even) {
+.records tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-#records tr:hover {
+.records tr:hover {
     background-color: #ddd;
 }
 
-#records th {
+.records th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
@@ -241,13 +241,6 @@ body {
     transition: 0.25px;
 }
 
-.box input[type="text"]:focus,
-.box input[type="password"]:focus {
-    width: 270px;
-    border-color: black;
-
-}
-
 .box input[type="button"] {
 
     border: 0;
@@ -267,14 +260,6 @@ body {
 
 .box input[type="button"]:hover {
     background: black;
-}
-
-#lineChart {
-    width: 100%;
-    max-width: 600px;
-    min-width: 0;
-    /* height: 420px; */
-    margin: 100px;
 }
 
 th {
